using Microsoft.AspNetCore.Identity;

namespace Ecom.Api.Entities;

public class AppUser : IdentityUser
{
    // extend later (FirstName, LastName, etc.)
}
